tests/expectations/execution/simple_external_struct.out
Error while running execution tests:
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'struct'
    --> compiler-test:14:5
     |
  14 |     struct Foo {
     |     ^^^^^^


Errors:
